Closed Bug 356327 Opened 18 years ago Closed 18 years ago

Pasted Windows Clipboard Images don't show up in the compose window

Categories

(Thunderbird :: Message Compose Window, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: mscott, Assigned: mscott)

References

Details

(Keywords: fixed1.8.1.1, verified1.8.1.3)

Attachments

(1 file)

Bug 223909 has finally landed on the trunk. However, between the time I made the patch and the time it got reviewed the following has happened: 1) Paste an image into the compose window 2) Note the broken icon image instead of the actual image from the clipboard. If you send the message, the image file is actually sent with the message and it renders correctly. But we should also be seeing the image in the compose window instead of the broken image icon.
Blocks: 223909
Status: NEW → ASSIGNED
Flags: blocking-thunderbird2+
It looks like the file hasn't finished getting written to by the time we try to insert the image into the message in nsHTMLDataTransfer.
Daniel, this is a small follow up patch the the pasting of clipboard images bug. By closing the output stream before we insert the image into the document, we ensure that the image is completely written to disk before editor trys to open the file.
Attachment #241992 - Flags: review?(daniel)
Follow-up testing Ctrl-v always works fine, but in addition to the broken link icon, in some cases the edit | paste button is grayed out. Not sure if this always happens when the broken link shows up. Personally, I really don't care as the functionality is there But some might find this bothersome. See the screenshot here: http://img177.imageshack.us/img177/2536/pastegrayedzf1.gif I beat this around as much as I could IE: clipboard copies, file copies from the explorer window etc All functions seem to work fine, except for the above.
Comment on attachment 241992 [details] [diff] [review] close the output stream when we are done writing r=daniel@glazman.org
Attachment #241992 - Flags: review?(daniel) → review+
fixed on the trunk
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Tested in 1.9.20061.1704 Patrocles Everything seems to work fine.
I'm still getting the broken image icon on paste (e.g., a screenshot) using CTRL+V and a clean profile on the trunk (Thunderbird version 3 alpha 1 (20061109), Windows XP). Was this bug *branch* only? If so, where's the *trunk* bug? Reopen? Thank you.
(In reply to comment #7) > I'm still getting the broken image icon on paste (e.g., a screenshot) using > CTRL+V and a clean profile on the trunk (Thunderbird version 3 alpha 1 > (20061109), Windows XP). > > Was this bug *branch* only? If so, where's the *trunk* bug? Reopen? Thank you. > This must be a regression, I am positive that the patch worked correctly after the original checkin. Currently using version 3 alpha 1 (20061108) and the broken image icon is back.
Checking regression range. Went back to original fix 20061017 worked fine. 20061101 worked fine. Current trunk fails. That's the best I can do with my available builds.
(In reply to comment #7) > I'm still getting the broken image icon on paste (e.g., a screenshot) using > CTRL+V and a clean profile on the trunk (Thunderbird version 3 alpha 1 > (20061109), Windows XP). > Looks like the return of the symptoms of this bug are due to #359852 since the pasted image format is "file:///C:/ "
Bug 359852 should have fixed this again in today's builds. Is that not the case? I'd prefer if we moved conversation to 359852 which is tracking a recent regression and has nothing to do with the changes for this bug.
this patch went into the branch as part of Bug 223909.
Keywords: fixed1.8.1.1
(In reply to comment #11) > Bug 359852 should have fixed this again in today's builds. Is that not the > case? I'd prefer if we moved conversation to 359852 which is tracking a recent > regression and has nothing to do with the changes for this bug. Bug 359852 is marked fixed, and I'm still getting the broken image icon using CTRL+V using the recent trunk build (version 3 alpha 1 (20061212)). Yes, the recipient sees the image, but I think this bug isn't yet properly fixed. REOPEN?
Bug 343933 is still unaddressed.
verified fixed 1.8.1.3 using Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8.1.3) Gecko/20070326 Thunderbird/2.0.0.0 ID:2007032620 - verified after some tests and also with the steps to reproduce from comment#0
Keywords: verified1.8.1.3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: