Bug #356327 --> Pasted windows clipboard images don't show up in the compose window. Close the file stream before we insert the image into the document. r=glazman